# LearnCodingInPython

./: .gitignore  .replit  README.md  main.py  pyproject.toml
Minesweeper/: clock.py  forfor.py  game.py  recursion.py
Minesweeper-1/: 1_square.py  game-bomb-numbers.py  game.py
SnakeGame/: ascii_art.py  border.py
lesson-one/: guessnumber.py  import.py
lesson-two/: color_palette.py  color_palette_dyn.py  coordinate-system.py  cuses_basic.py  game_border.py  screen_saver.py  snake-screen.py
sandbox/: curses-basic.py  curses-getstarted.py  test_module.py  trycurses.py
